...
                android:contentDescription="@string/task_has_new_messages_description" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/author_36dp"
                android:id="@+id/imageSharedTask"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/contributors_image_content_description" />
        </LinearLayout>

...
