...
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20">

        <!--MarginRight to support older versions than API 17-->
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/add_task_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
...
